--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MYSQL_ROOT_PASSWORD=your_root_password
-MYSQL_USER=your_wordpress_database_user
-MYSQL_PASSWORD=your_wordpress_database_password
+MYSQL_ROOT_PASSWORD=#Karibu2024
+MYSQL_USER=cloudextend
+MYSQL_PASSWORD=#Karibu2024
